# claude-code-sessions

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.serena/: project.yml
bench_results/: run_adr32_llama.sh
docs/: dqs.md  visualisation_data_mapping.json
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: claims_run.py  compare_engines.py  compare_projects.py  compare_runs.py  ctx_sizing.py  ctx_smoke.py  render_gantt.py  run_dedupe_migration.py  summary_bench.py  visualisation_data_mapper.py
specs/: spec-deployed.md  spec-timeline-visualisation.md  spec-universal-filters.md
tests/: __init__.py  conftest.py  test_api_filters.py  test_claim_clustering.py  test_claims.py  test_claims_api.py  test_claims_reindex.py  test_config_paths.py  test_context_window.py  test_domain_filter.py  test_embeddings.py  test_event_calls.py  test_indexer_service.py  test_introspect_parity.py  test_kg_cache_stats.py  test_kg_connection_isolation.py  test_merge_flat.py  test_merge_reground.py  test_merge_strict.py  test_msg_kind_subagent.py  test_parallel_ingester.py  test_performance_api.py  test_project_hierarchy.py  test_project_resolver.py  test_response_dedup.py  test_schema_timeline.py  test_session_metrics_api.py  test_session_parser.py  test_session_timing.py  test_sessions.py  test_summaries.py  test_summaries_api.py  test_summarise_bench.py  test_summary_bench.py  test_summary_claims.py  test_summary_json.py  test_summary_scorer.py  test_timeline_endpoint.py  test_wave_pipeline.py
(+298 files in other folders)
